# HaraliCU

./: .gitignore  CMakeLists.txt  HaraliCPUConfig.cmake.in  HaraliCU.pc.in  HaraliCUConfig.cmake.in  build.ps1  compileCPU.sh
CPU/src/: Direction.cpp  FeatureComputer.cpp  FeatureComputer.h  Features.cpp  Features.h  GLCM.cpp  GLCM.h  Image.h  ImageData.cpp  ImageData.h  ImageFeatureComputer.cpp  ImageFeatureComputer.h  ImageLoader.cpp  ImageLoader.h  ProgramArguments.cpp  ProgramArguments.h  WorkArea.h
GPU/src/: CudaFunctions.cu  FeatureComputer.cu  Features.cu  GLCM.cu  GLCM.h  ImageData.h  ImageFeatureComputer.cu  ImageLoader.cu  ImageLoader.h  ProgramArguments.cpp  ProgramArguments.h  Utils.cpp  Utils.h
